--- a/src/ui/components/WorkshopCard/stylesheet.css
+++ b/src/ui/components/WorkshopCard/stylesheet.css
@@ -51,7 +51,7 @@
 
 @media (max-width: 887px) {
   :scope {
-    grid-template-columns: var(--offset-horizontal) repeat(3, 1fr) var(--offset-horizontal);
+    grid-template-columns: var(--grid-template-columns);
     background: linear-gradient(to left, var(--color-light), var(--color-light)) no-repeat 0 11.25rem;
     padding: 0;
   }
